// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMusic Saga should dispatch the musicLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://ws.audioscrobbler.com/2.0/?method=user.gettopalbums&user=arazzy&api_key=API_KEY&limit=21&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getMusic Saga should dispatch the musicLoaded action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://ws.audioscrobbler.com/2.0/?method=user.gettopartists&user=arazzy&api_key=API_KEY&limit=21&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getMusic Saga should dispatch the musicLoaded action if it requests the data successfully 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=arazzy&api_key=API_KEY&limit=10&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getMusic Saga should dispatch the musicLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://ws.audioscrobbler.com/2.0/?method=user.gettopalbums&user=arazzy&api_key=API_KEY&limit=21&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getMusic Saga should dispatch the musicLoadingError action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://ws.audioscrobbler.com/2.0/?method=user.gettopartists&user=arazzy&api_key=API_KEY&limit=21&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getMusic Saga should dispatch the musicLoadingError action if the response errors 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=arazzy&api_key=API_KEY&limit=10&format=json",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
